fixes image on mobile

--- a/_sass/_jekyll-mono.scss
+++ b/_sass/_jekyll-mono.scss
@@ -179,8 +179,8 @@ button.button-primary:focus {
 }
 
 .ch-item {
-	width: 154%;
-	height: 150%;
+	width: 100%;
+	height: 100%;
 	border-radius: 50%;
 	position: relative;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.1);
@@ -190,8 +190,8 @@ button.button-primary:focus {
 .ch-info-wrap, 
 .ch-info{
 	position: absolute;
-	width: 300px;
-	height: 300px;
+	width: 220px;
+	height: 220px;
 	border-radius: 50%;
 }
 
